feat(api): add online badge
