# internal/oas/oas_response_encoders_gen.go
@@ -16,7 +16,54 @@ import (
 	"github.com/ogen-go/ogen/uri"
 )
 
-func encodeGetTelegramBadgeResponse(response *GetTelegramBadgeOKHeaders, w http.ResponseWriter, span trace.Span) error {
+func encodeGetTelegramBadgeResponse(response *SVGHeaders, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "image/svg+xml")
+	// Encoding response headers.
+	{
+		h := uri.NewHeaderEncoder(w.Header())
+		// Encode "Cache-Control" header.
+		{
+			cfg := uri.HeaderParameterEncodingConfig{
+				Name:    "Cache-Control",
+				Explode: false,
+			}
+			if err := h.EncodeParam(cfg, func(e uri.Encoder) error {
+				if val, ok := response.CacheControl.Get(); ok {
+					return e.EncodeValue(conv.StringToString(val))
+				}
+				return nil
+			}); err != nil {
+				return errors.Wrap(err, "encode Cache-Control header")
+			}
+		}
+		// Encode "ETag" header.
+		{
+			cfg := uri.HeaderParameterEncodingConfig{
+				Name:    "ETag",
+				Explode: false,
+			}
+			if err := h.EncodeParam(cfg, func(e uri.Encoder) error {
+				if val, ok := response.ETag.Get(); ok {
+					return e.EncodeValue(conv.StringToString(val))
+				}
+				return nil
+			}); err != nil {
+				return errors.Wrap(err, "encode ETag header")
+			}
+		}
+	}
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	writer := w
+	if _, err := io.Copy(writer, response.Response); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
+func encodeGetTelegramOnlineBadgeResponse(response *SVGHeaders, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "image/svg+xml")
 	// Encoding response headers.
 	{
